--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       text-align: center;
     }
   </style>
-  <body style="background-color:powderblue;">
+  <body style="background-color: rgb(111, 29, 55);">
     <h1 id="my-header">Style is important</h1>
     <p style="background-color:#ff00ff;">Proper HTML style is important</p>
     <img src="./images/HTML-style-guide.jpeg" alt="style">
