--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="My first webpage, with proper style">
     <meta name="keywords" content="mths, ics2o">
-    <meta name="author" content="titus-diceman">
+    <meta name="author" content="titus diceman">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first webpage, with proper style</title>
   </head>
@@ -17,9 +17,9 @@
       text-align: center;
     }
   </style>
-  <body style="background-color: rgb(111, 29, 55);">
+  <body style="background-color: rgb(200, 50, 200);">
     <h1 id="my-header">Style is important</h1>
-    <p style="background-color:#ff00ff;">Proper HTML style is important</p>
+    <p style="background-color: rgb(0, 120, 10);">Proper HTML style is important</p>
     <img src="./images/HTML-style-guide.jpeg" alt="style">
     <p>
       <a href="./cities.html">My cities page</a>
